--- a/content/posts/2026-01-05.md
+++ b/content/posts/2026-01-05.md
@@ -127,7 +127,7 @@ package axis_pkg is
 end package;
 ```
 
-Next, create an entity that use the interface. The example below implements an AXI-Stream broadcaster because it's a short, standalone example using an interface at the input port and an array of interfaces at the output port, so it covers most of the standard use cases.
+Next, create an entity that uses the interface. The example below implements an AXI-Stream broadcaster because it's a short, standalone example using an interface at the input port and an array of interfaces at the output port, so it covers most of the standard use cases.
 
 ```VHDL
 library ieee;
@@ -300,7 +300,7 @@ So far, the list of modules includes:
 - `axis_arb.vhd`
   - Priority arbiter.
 - `axis_broadcast.vhd`
-  - Broadcast on source stream to several destinations.
+  - Broadcast one source stream to several destinations.
 - `axis_cat.vhd`
   - Packet concatenate. Useful for adding a header or trailer to a payload.
 - `axis_demux.vhd`
@@ -336,7 +336,7 @@ Why build yet another HDL library when so many already exist?
 
 One notable difference between VHDL and SystemVerilog interfaces is that SV allows constants to be defined directly as part of the the interface, whereas VHDL does not.
 
-Here's an example from the excellent [taxi repo](https://github.com/fpganinja/taxi/) of SV components:
+Here's an example from the excellent [taxi repo](https://github.com/fpganinja/taxi/) of SV components (I would strongly recommend this repo if your project needs ethernet):
 
 ```SystemVerilog
 // SPDX-License-Identifier: MIT
@@ -423,7 +423,7 @@ interface taxi_axis_if #(
 endinterface
 ```
 
-In practice, I haven’t missed this capability. Unconstrained vectors handle width flexibility cleanly. Optional signals (such as `tlast` or `tuser`) are more awkward, but I prefer documenting expected behavior, having the user tie unused input pins to constants, leaving unused outputs disconnected, and allowing synthesis to optimize unused signals away.
+In practice, I haven’t missed the constant declaration capability. Unconstrained vectors handle width flexibility cleanly. Optional signals (such as `tlast` or `tuser`) are more awkward, but I've found the best way to handle it is documenting expected behavior, having the user tie unused input pins to constants, leaving unused outputs disconnected, and allowing synthesis to optimize unused signals away.
 
 If necessary, per-module generics (e.g., `USE_TLAST`) can be added, but in-general, I try to minimize generics to reduce verification complexity.
 
@@ -433,7 +433,7 @@ As expected, I ran into a few issues while trying out the new language feature. 
 
 I tend to disagree with the advice to "stick to VHDL-93 for maximum compatibility." I'm of the belief that the language should work for you, not the other way around. I'm more than willing to tolerate occasional tool bugs in exchange for meaningful productivity (and enjoyment of coding) gains.
 
-- **NVC Issue #1** - Cannot assign interface elements from within a loop in a process.
+- **NVC Issue #1** - Cannot assign interface elements from a loop within in a process.
   - This turned out to NOT be a simulator bug. Its actually just a weird edge-case with the VHDL 19 language that probably should have been fixed by the language standard committee.
   - For examples of the issue and a deeper discussion, check out the [NVC Github issue](https://github.com/nickg/nvc/issues/1356).
 
@@ -443,8 +443,8 @@ I tend to disagree with the advice to "stick to VHDL-93 for maximum compatibilit
   - For anyone else using NVC, or any open-source tool for that matter, I'd highly encourage you to file an issue for any bugs that you encounter. If you're used to dealing with large EDA companies, working with open-source authors can be a huge breath of fresh air.
 
 - **Vivado Issue #1** - Modules with interfaces randomly removed from synthesis.
-  - I thought all of my VHDL 19 dreams were dead out of the gate the first time I tried synthesizing an example design composed of all of my new axi stream modules. I wanted to get a feel for the expected timing performance and make pipelining performance improvements where it made sense, but before you know how fast your design will run, you have to put it through synthesis and implementation. Anyways, I was using Vivado 2024.2, which officially supports VHDL 19 interfaces, according to the documentation. I ran into an immediate bug, where some of my modules would completely disappear as if they were being synthesized away. The only reason this should ever happen is if signals are left disconnected, but this was not the case in my design. Everything was connected up to an IO pin.
-  - I tried upgrading to Vivado 2025.2 and that resolved the problem. So I would not trust anything older than Vivado 2025.2 with VHDL 19 interfaces, despite what Xilinx's documentation might say. I'm no newbie to Vivado bugs, so its not at all surprising to me that it had trouble with new language features. The tool went through the same set of growing pains back when they stated adding VHDL 08 support.
+  - I thought all of my VHDL 19 dreams were dead out of the gate the first time I tried synthesizing an example design composed of all of my new axi stream modules. I wanted to get a feel for the expected timing performance and make pipelining improvements where it made sense, but before you know how fast your design will run, you have to put it through synthesis and implementation. Anyways, I was using Vivado 2024.2, which officially supports VHDL 19 interfaces. I ran into an immediate bug, where some of my modules would completely disappear as if they were being synthesized away. The only reason this should ever happen is if signals are left disconnected, but this was not the case in my design. Everything was connected up to an IO pin.
+  - I tried upgrading to Vivado 2025.2 and that resolved the problem. So I would not trust anything older than Vivado 2025.2 with VHDL 19 interfaces, despite what Xilinx's documentation might say. I'm no newbie to Vivado bugs, so its not at all surprising to me that it had trouble with new language features. The tool went through the same set of growing pains back when they started adding VHDL 08 support. I recall an old co-worker telling me that he experienced the same problem back when he tried passing regular records as entity IO, sometime back in the early 2010's. Back then, the only safe bet was using `std_logic` and `std_logic_vector` for entity IO. I'm glad those days are behind us!
 
 - **Vivado Issue #2** - Cannot assign independent elements of an interface array directly to an output port.
   - For example, although the following example is perfectly legal VHDL 19 syntax (to the best of my knowledge) it causes Vivado elaboration to segfault with this message, even on version 2025.2.
@@ -497,7 +497,7 @@ begin
 end architecture;
 ```
 
-For now, I found that the best workaround is to use an intermediate signal. For example, this works without issue.
+For now, I found that the best workaround is to use an intermediate record. For example, this works without issue.
 
 ```VHDL
 library ieee;
