Added subtype example to VHDL interfaces post.

--- a/content/posts/2026-01-05.md
+++ b/content/posts/2026-01-05.md
@@ -38,6 +38,9 @@ Here’s a quick example showing how compact a chain of modules becomes when usi
 ```VHDL
 architecture rtl of intf_example is
 
+  signal clk  : std_ulogic;
+  signal srst : std_ulogic;
+
   signal int_axis : axis_arr_t(0 to 3) (
     tdata(15 downto 0),
     tkeep( 1 downto 0),
@@ -232,41 +235,24 @@ begin
 end architecture;
 ```
 
-Alternatively, you could break out individual interfaces instead of using an array. While this partially defeats the elegance of interfaces, it’s useful when you need fine-grained control or signal-level customization.
+Alternatively, you could break out individual interfaces instead of using an array. While this partially defeats the elegance of interfaces, it’s useful when you need fine-grained control or signal-level customization. This example also shows how you could use a subtype to reduce the lines of code when repeating a constrained record.
 
 ```VHDL
 architecture rtl of top is
 
-  constant DW : integer := 16;
-  constant KW : integer := 2;
-  constant UW : integer := 4;
-
   signal clk  : std_ulogic;
   signal srst : std_ulogic;
-
-  signal s_axis : axis_t (
-    tdata(DW - 1 downto 0),
-    tkeep(KW - 1 downto 0),
-    tuser(UW - 1 downto 0)
+  
+  subtype axis16_t is axis_t(
+    tkeep( 1 downto 0),
+    tdata(15 downto 0),
+    tuser( 3 downto 0)
   );
 
-  signal m0_axis : axis_t (
-    tdata(DW - 1 downto 0),
-    tkeep(KW - 1 downto 0),
-    tuser(UW - 1 downto 0)
-  );
-
-  signal m1_axis : axis_t (
-    tdata(DW - 1 downto 0),
-    tkeep(KW - 1 downto 0),
-    tuser(UW - 1 downto 0)
-  );
-
-  signal m2_axis : axis_t (
-    tdata(DW - 1 downto 0),
-    tkeep(KW - 1 downto 0),
-    tuser(UW - 1 downto 0)
-  );
+  signal s_axis  : axis16_t;
+  signal m0_axis : axis16_t;
+  signal m1_axis : axis16_t;
+  signal m2_axis : axis16_t;
 
 begin
 
