--- a/content/posts/2026-01-05.md
+++ b/content/posts/2026-01-05.md
@@ -21,13 +21,13 @@ I'll start by pointing to some existing articles that explain interfaces and why
 - [Here's one from OSVVM](https://osvvm.org/archives/1668)
 - [And finally, a short description from the Vivado documentation](https://docs.amd.com/r/en-US/ug901-vivado-synthesis/Interfaces?tocId=QKHQ7u5ExGtLMcrbbVy23w)
 
-Now here's my own take:
+Now here's an overview:
 
 One of the biggest annoyances with HDL design is wiring up large repetitive interfaces between modules while coding a large system. AXI is one of the best examples of this. Who wants to repeatedly and manually connect up 100 independent signals between modules? Its error-prone, time-consuming, and feels like the sort of problem that should be easily solvable, if only we had better tools.
 
 Enter VHDL interfaces.
 
-Historically, engineers addressed this problem using a two-record approach: One record for grouping common input signals, and another for output signals. This worked reasonably well, but VHDL-19 introduced an even better way to handle this, by adding a built-in way to group input and output signals via interface views.
+Historically, engineers addressed this problem using a two-record approach: One record for grouping common input signals, and another for output signals. This worked reasonably well, but VHDL-19 introduced an even better way to handle this, by adding a built-in way to group input and output signals via interface mode views.
 
 While records only group signals; interfaces group direction, intent, and usage.
 
@@ -322,7 +322,7 @@ Why build yet another HDL library when so many already exist?
 
 One notable difference between VHDL and SystemVerilog interfaces is that SV allows constants to be defined directly as part of the the interface, whereas VHDL does not.
 
-Here's an example from the excellent [taxi repo](https://github.com/fpganinja/taxi/) of SV components (I would strongly recommend this repo if your project needs ethernet):
+Here's an example from the excellent [taxi repo](https://github.com/fpganinja/taxi/) of SV components (I'd highly recommend this repo if your project needs ethernet):
 
 ```SystemVerilog
 // SPDX-License-Identifier: MIT
